--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,12 @@
         "psr-4": {
             "mywebshop\\" : "./"
         }
+    },
+    "config": {
+        "disable-tls": false,
+        "secure-http": true
+    },
+    "require": {
+        "robmorgan/phinx": "^0.12.7"
     }
 }
